2004-09-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL: renamed libmod_mono.so to mod_mono.so.
	* configure.in: removed old module stuff. Fixed apr_socket_connect
	test, check for http_protocol.h
	* mod_mono.conf.in: renamed libmod_mono.so to mod_mono.so.
	* src/.cvsignore:  renamed libmod_mono.so to mod_mono.so.
	* src/Makefile.am: removed old module stuff, renamed to mod_mono.so,
	added -Wall.

	* src/ApacheApplicationHost.cs: Removed.
	* src/ApacheWorkerRequest.cs: Removed.
	* src/IApplicationHost.cs: Removed.
	* src/MonoWorkerRequest.cs: Removed.
	* src/Request.cs: Removed.
	* src/makedll.mak: Removed.
	* src/mod_mono_old.c: Removed.

2004-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Makefile.am:
	* configure.in:
	* src/Makefile.am: changes needed by our favourite packager to make
	rpms out of this. Building the old module is no longer an option.

2004-08-12  Geoff Norton <gnorton@customerdna.com>

	* INSTALL:
	* man/mod_mono.8.in:
	* src/mod_mono.c:  Use RLIMIT_DATA as opposed to RLIMIT_AS; because
	RLIMIT_AS isn't defined on all platforms.  Update documentation to
	reflect this change.

2004-07-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: 1.0.1
	* src/mod_mono.c: attempt to address sigsegv seem on Fedora when all
	defaults are used. Write to the error log if the user does not have
	permission on .wapi directory.

2004-07-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: s/apr-0/apr/

	* INSTALL:
	* man/mod_mono.8.in: documented MonoMaxMemory and MonoMaxCPUTime and
	other minor updates.

2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: set filename and listen_address defaults in the
	post_config hook.

2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: use RLIMIT_AS instead of RLIMIT_DATA. gcc 3.2 doesn't
	like #ifdef inside macro parameters.

2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for setrlimit.